
Tue May 16 10:31:12 EDT 1995	Paul Park	(pjpark@mit.edu)
	* proto_serv.c	- Don't destroy the replay cache when done.


Fri May 12 16:06:24 EDT 1995	Paul Park	(pjpark@mit.edu)
	* admin.c	- Change for Ultrix: howmany->how_many because howmany
			  is a macro used to count how many elements in an
			  array.
	* kadm5_defs.h, srv_net.c
			- Use DEBUG_NOSLAVES to determine when to create a
			  new slave for handling connections.  Also, change
			  max slaves to 2*SOMAXCONN and reduce sleep wait to
			  2 seconds.
	* configure.in, proto_serv.c, srv_acl.c, srv_main.c, srv_net.c
			- Use POSIX signals/setjmp/longjmp when present.


Thu May 11 12:20:58 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_key.c	- Defer setting keyb and encb init flags until we
			  have successfully verified the master key.  Avoids
			  a core dump if we don't enter it correctly.
	* srv_net.c	- Set SO_REUSEADDR on the socket if we're not binding
			  to the standard port.  Also remove logic which
			  retried bind if bind failed.

Sat May 9 17:46:31 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* srv_output.c (lang_error_message): Local variable is assigned
		from error_message() which returns a const char *. Should
		be assigned to same.

	* srv_acl.c: Added const to acl_acl_file
		definition. default_acl_file is a const char * and gets
		assigned to it.

Tue May 9 15:29:10 EDT 1995	Paul Park	(pjpark@mit.edu)
	Add new administrative protocol support functions and fix bugs.
	* kadm5_defs.h	- Add extract operation.  Move error subcodes
			  to adm.h.  Update prototypes.
	* kadmind5.M	- Add descriptions of -n, -p and -T options.  Change
			  name of -i to -m option.  Add description of
			  'e' acl entry.
	* passwd.c	- Make passwd_check_npass_ok a global routine.
	* proto_serv.c	- Use keytab supplied with -T option.  Support
			  new administrative protocol functions.  Destroy
			  replay cache when done with request.
	* srv_acl.c	- Add catchall entry which allows principals to